tests/ui/attributes/crate-name-macro-call.stderr
error: attribute value must be a literal
  --> $DIR/crate-name-macro-call.rs:4:17
   |
LL | #![crate_name = concat!("my", "crate")]
   |                 ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

